force-app/main/default/objects/Bus_Ticket__c/Bus_Ticket__c.object-meta.xml
<CustomObject>
    <label>Bus Ticket</label>
    <nameField>
        <displayFormat>TCIN-{000000}</displayFormat>
        <label>Ticket Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bus Ticket</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>