force-app/main/default/objects/Bus_Ticket__c/fields/Bus_Trip__c.field-meta.xml
<CustomField>
    <fullName>Bus_Trip__c</fullName>
    <label>Bus Trip</label>
    <referenceTo>Bus_Trip__c</referenceTo>
    <relationshipLabel>Bus Ticket</relationshipLabel>
    <relationshipName>Bus_Ticket</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>