force-app/main/default/objects/Bus_Ticket__c/fields/Seat__c.field-meta.xml
<CustomField>
    <fullName>Seat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seat</label>
    <referenceTo>Seat__c</referenceTo>
    <relationshipLabel>Bus Ticket</relationshipLabel>
    <relationshipName>Bus_Ticket</relationshipName>
    <type>Lookup</type>
</CustomField>