force-app/main/default/objects/Bus_Ticket__c/fields/Ticket_cost__c.field-meta.xml
<CustomField>
    <fullName>Ticket_cost__c</fullName>
    <label>Ticket cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>